# youtube-ai-detector-SHORTS

./: .gitignore  nixpacks.toml  readme.md
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  nixpacks.toml
backend/src/: lib.rs  main.rs
backend/static/: index.html
extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js  styles.css
scripts/: package-extension.sh
