[package]
name = "youtube-ai-blocker-backend"
version = "0.1.0"
edition = "2021"
default-run = "youtube-ai-blocker-backend"

[[bin]]
name = "yab-cli"
path = "src/bin/yab-cli.rs"

[[bin]]
name = "youtube-ai-blocker-backend"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
uuid = { version = "1", features = ["v4", "serde"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
